src/objects/Account_Product__c.object
<CustomObject>
    <fields>
        <fullName>API_Response__c</fullName>
        <label>API Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accrual_Amount__c</fullName>
        <formula>IF(ISNULL(activeat__c), 
Product_Price__c * (MOD(TODAY() - Last_Invoice_Date__c, 7) / 7), 

IF(activeat__c &gt;= Last_Invoice_Date__c, Product_Price__c * (MOD(TODAY() - activeat__c, 7) / 7), Product_Price__c * (MOD(TODAY() - Last_Invoice_Date__c, 7) / 7))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Days__c</fullName>
        <label>Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Position__c</fullName>
        <description>AdWords average position for 7 days</description>
        <inlineHelpText>AdWords average position for 7 days</inlineHelpText>
        <label>Ad Position</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adwords_Acc_Activity__c</fullName>
        <inlineHelpText>Adwords change history from last 21 days</inlineHelpText>
        <label>Adwords Acc Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adwords_Delinked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adwords Delinked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adwords_Domain__c</fullName>
        <label>Adwords Domain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adwords_Email__c</fullName>
        <label>Adwords Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Adwords_ID__c</fullName>
        <label>Adwords ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_URL__c</fullName>
        <formula>if(ocid__c != &apos;&apos;, HYPERLINK(&quot;https://adwords.google.com/aw/overview?ocid=&quot;&amp;ocid__c&amp;&quot;&quot;, &apos;Link&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adwords URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BJB_Company__c</fullName>
        <formula>Account__r.BJB_Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BJB Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_ID__c</fullName>
        <label>Bing ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Monitor_API_Client_ID__c</fullName>
        <label>Campaign Monitor API Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_CVN__c</fullName>
        <label>Card CVN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Month_Expiry__c</fullName>
        <label>Card Month Expiry</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Year_Expiry__c</fullName>
        <label>Card Year Expiry</label>
        <picklist>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_made_by_us__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change made by us</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chargebacks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chargebacks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkout_Owner__c</fullName>
        <formula>Owner:User.LastName = &quot;Site Guest User&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checkout Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <formula>Sign_Up_del__r.Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <description>AdWords average conversion rate for last 7 days</description>
        <inlineHelpText>AdWords average conversion rate for last 7 days</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversions__c</fullName>
        <description>AdWords total conversions for last 7 days</description>
        <inlineHelpText>AdWords total conversions for last 7 days</inlineHelpText>
        <label>Conversions</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Invoice__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Rate__c</fullName>
        <formula>IF(ISPICKVAL(Recurring_Period__c, &apos;Weekly&apos;), Product_Price__c/7, 
IF(ISPICKVAL(Recurring_Period__c, &apos;Fortnightly&apos;), Product_Price__c/14,
IF(ISPICKVAL(Recurring_Period__c, &apos;Monthly&apos;), Product_Price__c/30,  
IF(ISPICKVAL(Recurring_Period__c, &apos;Yearly&apos;), Product_Price__c/365, 
Product_Price__c)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disapproved_Ads__c</fullName>
        <label>Disapproved Ads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Ad_ID__c</fullName>
        <label>Facebook Ad ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <label>Facebook ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>Relationship discount start date</description>
        <inlineHelpText>Relationship discount start date</inlineHelpText>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly_Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_First_Owner_Assignment__c</fullName>
        <formula>IF(CONTAINS(Owner:User.Username,&apos;checkout&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is First Owner Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_14_days_num_of_calls__c</fullName>
        <description>Last 14 days num of calls</description>
        <inlineHelpText>Last 14 days num of calls</inlineHelpText>
        <label>Last 14 days num of calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_14_days_num_of_emails__c</fullName>
        <description>Last 14 days num of emails</description>
        <inlineHelpText>Last 14 days num of emails</inlineHelpText>
        <label>Last 14 days num of emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_21_days_num_of_calls__c</fullName>
        <description>Last 21 days num of calls</description>
        <inlineHelpText>Last 21 days num of calls</inlineHelpText>
        <label>Last 21 days num of calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_21_days_num_of_emails__c</fullName>
        <description>Last 21 days num of emails</description>
        <inlineHelpText>Last 21 days num of emails</inlineHelpText>
        <label>Last 21 days num of emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_days_num_of_calls__c</fullName>
        <description>Last 7 days num of calls</description>
        <inlineHelpText>Last 7 days num of calls</inlineHelpText>
        <label>Last 7 days num of calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_days_num_of_emails__c</fullName>
        <description>Last 7 days num of emails</description>
        <inlineHelpText>Last 7 days num of emails</inlineHelpText>
        <label>Last 7 days num of emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Adwords_Update__c</fullName>
        <label>Last Adwords Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Invoice_Date__c</fullName>
        <label>Last Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Invoice_Number__c</fullName>
        <label>Last Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Stats_Update__c</fullName>
        <label>Last Stats Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MTD_Revenue__c</fullName>
        <formula>if(AND(!ISNULL(cancelat__c),MONTH(TODAY()) == MONTH(cancelat__c)), 
(cancelat__c - DATE(YEAR(TODAY()),MONTH(TODAY()),1))*Daily_Rate__c , 
(if(DATEVALUE(CreatedDate) &gt;= DATE(YEAR(TODAY()),MONTH(TODAY()),1), (TODAY() - DATEVALUE(CreatedDate) + 1 )*Daily_Rate__c, ((TODAY() - DATE(YEAR(TODAY()),MONTH(TODAY()),1))*Daily_Rate__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Usage__c</fullName>
        <label>Max Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_contacts_required__c</fullName>
        <formula>if(and(Active_Days__c &lt;=28,  (Last_7_days_num_of_calls__c +  Last_7_days_num_of_emails__c) &gt;= 1 ), true, 
if(and(Active_Days__c &gt;28,Active_Days__c &lt;= 84,(Last_14_days_num_of_calls__c +  Last_14_days_num_of_emails__c) &gt;= 1 ), true, 
if(and(Active_Days__c &gt;84,(Last_21_days_num_of_calls__c +  Last_21_days_num_of_emails__c) &gt;= 1 ), true, false
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Contacts Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <formula>IF(ISPICKVAL(Recurring_Period__c, &apos;Weekly&apos;), Product_Price__c*52/12, 
IF(ISPICKVAL(Recurring_Period__c, &apos;Fortnightly&apos;), Product_Price__c*26/12, 
IF(ISPICKVAL(Recurring_Period__c, &apos;Yearly&apos;), Product_Price__c/12, 
Product_Price__c)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Completed__c</fullName>
        <formula>IF( ISBLANK(Sign_Up_del__r.Completed_Date__c)  , 0, Monthly_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Recurring (Completed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_On_Card__c</fullName>
        <label>Name On Card</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_Keywords_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negative Keywords Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Adwords_Change__c</fullName>
        <formula>if( OR(Last_Adwords_Update__c == null, today() - Last_Adwords_Update__c &gt; 21), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Adwords Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PauseSmallThanActive__c</fullName>
        <formula>IF(pauseat__c &lt;= activeat__c , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PauseSmallThanActive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Made_So_Far__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Made So Far</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Made_This_Month__c</fullName>
        <label>Payment Made This Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <label>Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Eway</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Buddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commweb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Predictable_Revenue__c</fullName>
        <formula>if(AND(!ISNULL(cancelat__c),MONTH(TODAY()) == MONTH(cancelat__c)), 
(cancelat__c - DATE(YEAR(TODAY()),MONTH(TODAY()),1))*Daily_Rate__c , 
 (if(DATEVALUE(CreatedDate) &gt;= DATE(YEAR(TODAY()),MONTH(TODAY()),1), (DATE(YEAR(TODAY()), MONTH(TODAY()) + 1, 1) - 1 - DATEVALUE(CreatedDate) )*Daily_Rate__c, Monthly_Price__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicate Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prepaid_Amount__c</fullName>
        <formula>If(ISPICKVAL( Recurring_Period__c , &apos;Monthly&apos;), ((Last_Invoice_Date__c + 30 -TODAY())/30)*Product_Price__c , 




If(ISPICKVAL( Recurring_Period__c , &apos;Fortnightly&apos;), 
((Last_Invoice_Date__c + 14-TODAY())/14)*Product_Price__c, 

If(ISPICKVAL( Recurring_Period__c , &apos;Quarterly&apos;), 
((Last_Invoice_Date__c + 90 -TODAY())/90)*Product_Price__c, 


If(ISPICKVAL( Recurring_Period__c , &apos;Yearly&apos;), 
((Last_Invoice_Date__c + 365 -TODAY())/365)*Product_Price__c, 0)


)


)


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <displayFormat>P{000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Package</label>
        <referenceTo>Product_Package__c</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alter Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Linking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>IF(OR(CONTAINS(Name,&quot;Adwords&quot;),(CONTAINS(Name, &quot;AdWords&quot;))), &apos;AdWords Management&apos;,
IF(CONTAINS(Name,&quot;SEO&quot;),&apos;SEO&apos;,
IF(CONTAINS(Name,&quot;Facebook&quot;), &apos;Social Marketing&apos;, 
IF(CONTAINS(Name,&quot;Social&quot;), &apos;Social Marketing&apos;,
IF(CONTAINS(Name,&quot;Converto&quot;), &apos;ConvertoPages&apos;, &apos;&apos;) ))))</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Score__c</fullName>
        <label>Quality Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Frequency__c</fullName>
        <description>The frequency of this product to be billed</description>
        <label>Recurring Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Period__c</fullName>
        <description>The unit of recurring frequency</description>
        <label>Recurring Period</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Discount__c</fullName>
        <label>Relationship Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller</label>
        <referenceTo>Reseller__c</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_Active_Days__c</fullName>
        <formula>cancelat__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEO Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLX_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLX Product</label>
        <referenceTo>SLX_Product__c</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Report__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sign_Up_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Up</label>
        <referenceTo>Sign_Up__c</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_Pause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold to Pause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spot_Checked__c</fullName>
        <formula>NOT(ISNULL(Sign_Up_del__r.Spotcheck_Completed_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spot Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Relationship discount end date</description>
        <inlineHelpText>Relationship discount end date</inlineHelpText>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total AdWords cost for last 7 days</description>
        <inlineHelpText>Total AdWords cost for last 7 days</inlineHelpText>
        <label>Total Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>activeat__c</fullName>
        <label>activeat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cancelSmallThanActive__c</fullName>
        <formula>IF(cancelat__c &lt;= activeat__c , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cancelSmallThanActive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cancelSmallThanPause__c</fullName>
        <formula>IF(cancelat__c &lt;= pauseat__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cancelSmallThanPause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cancelat__c</fullName>
        <label>cancelat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>clicks__c</fullName>
        <description>Adwords clicks from last 7 days</description>
        <inlineHelpText>Adwords clicks from last 7 days</inlineHelpText>
        <label>Clicks</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpc__c</fullName>
        <description>Adwords cost-per-click from last 7 days</description>
        <inlineHelpText>Adwords cost-per-click from last 7 days</inlineHelpText>
        <label>CPC</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ctr__c</fullName>
        <description>Adwords click-through-rate for last 7 days</description>
        <inlineHelpText>Adwords click-through-rate for last 7 days</inlineHelpText>
        <label>CTR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>hasCancellationDate__c</fullName>
        <formula>!ISBLANK( cancelat__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hasCancellationDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>impressions__c</fullName>
        <description>Adwords impressions from last 7 days</description>
        <inlineHelpText>Adwords impressions from last 7 days</inlineHelpText>
        <label>Impressions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <formula>ISPICKVAL(Product_Status__c, &apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUserActive__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isUserActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ocid__c</fullName>
        <description>equivalent to adwords id in the Adwords URL</description>
        <label>ocid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pauseat__c</fullName>
        <label>pauseat</label>
        <type>Date</type>
    </fields>
    <label>Account Product</label>
    <nameField>
        <label>Account Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Adwords_ID_Format</fullName>
        <active>true</active>
        <description>enforce xxx-xxx-xxxx format for adwords id field</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Adwords_ID__c)), NOT(REGEX(Adwords_ID__c, &quot;[0-9]{3}-[0-9]{3}-[0-9]{4}&quot;)))</errorConditionFormula>
        <errorMessage>Please make sure the adwords id is in xxx-xxx-xxxx format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Relationship_Discount_Dates</fullName>
        <active>true</active>
        <description>To date should be bigger than from date</description>
        <errorConditionFormula>From__c &gt;= To__c</errorConditionFormula>
        <errorMessage>Relationship discount To date must be bigger than From date</errorMessage>
    </validationRules>
</CustomObject>